# New-ImServer

./: README.md
IM/: CMakeLists.txt
IM/Test/: test_websocket.py  web.cpp
IM/conf/: server.jsonc
IM/database/: kafka_topics.md  redis_design.md  schema.sql
IM/docs/: api.md  architecture.md  assets_requirements.md  backend_issues.md  configuration.md  installation.md  qt_client_design.md
IM/docs/thesis/: main.md  thesis.md
IM/include/server/: admin_service.h  file_service.h  message_service.h  notification_service.h  relation_service.h  server.h  user_service.h  websocket_handler.h
IM/include/server/db/: mysql_connection.h  redis_client.h
IM/include/server/kafka/: kafka_config.h  kafka_consumer.h  kafka_producer.h
IM/include/server/utils/: config.h  datetime.h  error_code.h  jwt_verifier.h  logger.h  security.h  string_util.h
IM/proto/: service.proto
IM/qml/: LoginWindow.qml  MainWindow.qml  RegisterWindow.qml  ResetPasswordWindow.qml  main.qml
IM/qml/components/: ChatWindow.qml  ColorPicker.qml  EmojiPicker.qml  FileTransferProgress.qml  FileUploader.qml  LoginForm.qml  MessageBubble.qml  NetworkStatusIndicator.qml  RegisterForm.qml  ThemeSwitcher.qml  UserListItem.qml
IM/qml/pages/: ChatPage.qml  ContactsPage.qml  CreateGroupPage.qml  ThemePage.qml
IM/qml/utils/: ChatWebSocket.qml  DateTimeUtils.qml  Theme.qml  WebSocketManager.qml
IM/src/server/: admin_service.cpp  file_service.cpp  main.cpp  message_service.cpp  notification_service.cpp  relation_service.cpp  server.cpp  user_service.cpp  websocket_handler.cpp
IM/src/server/db/: mysql_connection.cpp  redis_client.cpp
IM/src/server/handlers/: theme_handler.cpp
IM/src/server/kafka/: kafka_consumer.cpp  kafka_producer.cpp
IM/src/server/utils/: config.cpp  datetime.cpp  error_code.cpp  jwt_verifier.cpp  logger.cpp  security.cpp  string_util.cpp
